--- a/src/containers/AuthenticationPage/SignupForm/SignupForm.module.css
+++ b/src/containers/AuthenticationPage/SignupForm/SignupForm.module.css
@@ -13,11 +13,15 @@
 .name {
   display: flex;
   justify-content: space-between;
-  margin-top: 24px;
+  margin-bottom: 24px;
 
   @media (--viewportMedium) {
     margin-top: 32px;
   }
+}
+
+.email{
+  margin-bottom: 24px;
 }
 
 .firstNameRoot {
@@ -30,6 +34,7 @@
 
 .password {
   composes: marketplaceModalPasswordMargins from global;
+  margin-bottom: 24px;
 }
 
 .bottomWrapper {
