--- a/src/containers/ListingPage/CustomListingPageComponents/Listing.module.css
+++ b/src/containers/ListingPage/CustomListingPageComponents/Listing.module.css
@@ -1,3 +1,5 @@
+@import '../../../styles/customMediaQueries.css';
+
 .listingNavigation{
     display: flex;
     gap:1rem;
@@ -29,3 +31,95 @@
     overflow-x: scroll;
     width: 100%;
 }
+
+
+.orderFormBoxA{
+    display: flex;
+    gap:1rem;
+}
+
+
+
+.addImageWrapper {
+    height: 100px;
+    width: 100px;
+  }
+
+.addImageInput {
+    display: none;
+  }
+
+  .addImage {
+    /* Layout */
+    /* Maintain aspect ratio */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0;
+    padding: 5px;
+    /* Colors */
+    background-color: var(--colorWhite);
+  
+    @media (--viewportLarge) {
+      background-color: var(--colorGrey50);
+    }
+  
+    border-style: dashed;
+    border-color: var(--colorGrey100);
+    border-width: 2px;
+    border-radius: 2px;
+  
+    /* Behaviour */
+    cursor: pointer;
+    transition: var(--transitionStyleButton);
+  
+    &:hover {
+      border-color: var(--colorGrey300);
+    }
+  }
+
+  .chooseImageText {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .chooseImage {
+   
+  }
+
+  .imageTypes {
+    composes: marketplaceTinyFontStyles from global;
+    color: var(--colorGrey300);
+  
+    margin-top: 0;
+    margin-bottom: 0;
+  
+    @media (--viewportLarge) {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  }
+
+  .addImageSection{
+    display: flex;
+    margin-block:1rem;
+    gap:1rem;
+  }
+
+  .orderAddedImage{
+    position: relative;
+  }
+
+  .closeIcon{
+    position: absolute;
+    right:0;
+    height: 20px;
+    width: 20px ;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
